[gd_scene load_steps=6 format=3 uid="uid://bkw716jprs1ik"]

[ext_resource type="Script" path="res://addons/onscreen_output/main_panel.gd" id="1_trmv1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_osyjl"]

[sub_resource type="LabelSettings" id="LabelSettings_0dncg"]
font_size = 24

[sub_resource type="Image" id="Image_hv0jc"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 184, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 181, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 73, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 181, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 181, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 180, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_dygbu"]
image = SubResource("Image_hv0jc")

[node name="MainPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_trmv1")

[node name="BasicConfigVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AppearanceLabel" type="Label" parent="BasicConfigVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_osyjl")
text = "Basic Config"
label_settings = SubResource("LabelSettings_0dncg")

[node name="DebugEnabledHBoxContainer" type="HBoxContainer" parent="BasicConfigVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BasicConfigVBoxContainer/DebugEnabledHBoxContainer"]
layout_mode = 2
text = "Debug Enabled: "

[node name="DebugEnabledCheckBox" type="CheckBox" parent="BasicConfigVBoxContainer/DebugEnabledHBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="TimestampHBoxContainer" type="HBoxContainer" parent="BasicConfigVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BasicConfigVBoxContainer/TimestampHBoxContainer"]
layout_mode = 2
text = "Show timestamp: "

[node name="TimestampCheckBox" type="CheckBox" parent="BasicConfigVBoxContainer/TimestampHBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="LogFileHBoxContainer" type="HBoxContainer" parent="BasicConfigVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BasicConfigVBoxContainer/LogFileHBoxContainer"]
layout_mode = 2
text = "Save log files: "

[node name="LogFileCheckBox" type="CheckBox" parent="BasicConfigVBoxContainer/LogFileHBoxContainer"]
layout_mode = 2

[node name="FilePathHBoxContainer" type="HBoxContainer" parent="BasicConfigVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="BasicConfigVBoxContainer/FilePathHBoxContainer"]
layout_mode = 2
text = "Save Path: "

[node name="TextEdit" type="TextEdit" parent="BasicConfigVBoxContainer/FilePathHBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "user://OnscrnOutput_LOGS"
scroll_fit_content_height = true

[node name="Button" type="TextureButton" parent="BasicConfigVBoxContainer/FilePathHBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = SubResource("ImageTexture_dygbu")
stretch_mode = 3

[node name="FileDialog" type="FileDialog" parent="BasicConfigVBoxContainer/FilePathHBoxContainer/Button"]
title = "Open a Directory"
initial_position = 1
size = Vector2i(1000, 500)
min_size = Vector2i(1000, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 1

[node name="LayoutVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LayoutLabel" type="Label" parent="LayoutVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_osyjl")
text = "Layout
"
label_settings = SubResource("LabelSettings_0dncg")

[node name="AnchorHBoxContainer" type="HBoxContainer" parent="LayoutVBoxContainer"]
layout_mode = 2

[node name="AnchorLabel" type="Label" parent="LayoutVBoxContainer/AnchorHBoxContainer"]
layout_mode = 2
text = "Anchor to: "

[node name="AnchorOptionButton" type="OptionButton" parent="LayoutVBoxContainer/AnchorHBoxContainer"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Top-Left"
popup/item_0/id = 0
popup/item_1/text = "Top-Right"
popup/item_1/id = 1
popup/item_2/text = "Bottom-Left"
popup/item_2/id = 2
popup/item_3/text = "Bottom-Right"
popup/item_3/id = 3

[node name="AppearanceVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AppearanceLabel" type="Label" parent="AppearanceVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_osyjl")
text = "Appearance
"
label_settings = SubResource("LabelSettings_0dncg")

[node name="FontColorHBoxContainer" type="HBoxContainer" parent="AppearanceVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="AppearanceVBoxContainer/FontColorHBoxContainer"]
layout_mode = 2
text = "Font Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="AppearanceVBoxContainer/FontColorHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.776471, 0.792157, 0.827451, 1)

[node name="BackgroundColorHBoxContainer" type="HBoxContainer" parent="AppearanceVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="AppearanceVBoxContainer/BackgroundColorHBoxContainer"]
layout_mode = 2
text = "Background Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="AppearanceVBoxContainer/BackgroundColorHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.0980392, 0.109804, 0.184314, 1)

[node name="FontSizeHBoxContainer" type="HBoxContainer" parent="AppearanceVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FontSizeLabel" type="Label" parent="AppearanceVBoxContainer/FontSizeHBoxContainer"]
layout_mode = 2
text = "Font Size: "

[node name="FontSizeLineEdit" type="SpinBox" parent="AppearanceVBoxContainer/FontSizeHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 16.0

[node name="SaveButton" type="Button" parent="."]
layout_mode = 2
text = "Save!"

[connection signal="pressed" from="BasicConfigVBoxContainer/FilePathHBoxContainer/Button" to="." method="_on_button_pressed"]
